Fleet UI: [bug squashes] Fix team dropdown z-index issue, fix copy icon hover state, fix spacing before icons (#14034)

--- a/frontend/components/TeamsDropdown/_styles.scss
+++ b/frontend/components/TeamsDropdown/_styles.scss
@@ -52,6 +52,7 @@
     border-radius: 6px;
     padding-right: 0;
     margin: 0;
+    z-index: 999; // in front of tooltip wrapper
   }
 
   .Select-control {
